{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 61,
  "lineage": "265098e1-9b51-1249-6ead-ed1bd91278b8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0f69e343",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128198028467:subnet/subnet-0f69e343",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "available_ip_address_count": 4086,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-0f69e343",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "128198028467",
            "state": "available",
            "tags": {
              "Name": "Public",
              "Network": "Public-Subnet02"
            },
            "vpc_id": "vpc-ed73be86"
          }
        },
        {
          "index_key": "subnet-4a082a30",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128198028467:subnet/subnet-4a082a30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-4a082a30",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "128198028467",
            "state": "available",
            "tags": {
              "Name": "Public",
              "Network": "Public-Subnet01"
            },
            "vpc_id": "vpc-ed73be86"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128198028467:subnet/subnet-0f69e343",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "available_ip_address_count": 4086,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-0f69e343",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "128198028467",
            "state": "available",
            "tags": {
              "Name": "Public",
              "Network": "Public-Subnet02"
            },
            "vpc_id": "vpc-ed73be86"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128198028467:subnet/subnet-4a082a30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-4a082a30",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "128198028467",
            "state": "available",
            "tags": {
              "Name": "Public",
              "Network": "Public-Subnet01"
            },
            "vpc_id": "vpc-ed73be86"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e36b7901e884a10",
            "arn": "arn:aws:ec2:us-east-2:128198028467:instance/i-0c7fef6aa11b7671a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7fef6aa11b7671a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deepthi",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07a30dc2d5a20f4f2",
            "private_dns": "ip-172-31-43-138.us-east-2.compute.internal",
            "private_ip": "172.31.43.138",
            "public_dns": "ec2-18-118-143-138.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.143.138",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-069de436c0a9ecaaf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "mediawiki-dev1-rds-sg-test"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f69e343",
            "tags": {
              "Name": "mediawiki-instance1-blue-0",
              "Project": "mediawiki"
            },
            "tags_all": {
              "Name": "mediawiki-instance1-blue-0",
              "Project": "mediawiki"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0466d2362e6eebd46"
            ]
          },
          "dependencies": [
            "aws_security_group.security_group",
            "data.aws_ami.centos",
            "data.aws_subnet.subnet_id",
            "data.aws_subnet_ids.all_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e36b7901e884a10",
            "arn": "arn:aws:ec2:us-east-2:128198028467:instance/i-0a46013f09b7b3a61",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a46013f09b7b3a61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deepthi",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ed57ca1640507042",
            "private_dns": "ip-172-31-40-127.us-east-2.compute.internal",
            "private_ip": "172.31.40.127",
            "public_dns": "ec2-18-222-194-126.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.194.126",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fe64be79bcd39e54",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "mediawiki-dev1-rds-sg-test"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f69e343",
            "tags": {
              "Name": "mediawiki-instance1-blue-1",
              "Project": "mediawiki"
            },
            "tags_all": {
              "Name": "mediawiki-instance1-blue-1",
              "Project": "mediawiki"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0466d2362e6eebd46"
            ]
          },
          "dependencies": [
            "aws_security_group.security_group",
            "data.aws_ami.centos",
            "data.aws_subnet.subnet_id",
            "data.aws_subnet_ids.all_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e36b7901e884a10",
            "arn": "arn:aws:ec2:us-east-2:128198028467:instance/i-0231fed08caef9029",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0231fed08caef9029",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deepthi",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cd2f31ab8acb75b0",
            "private_dns": "ip-172-31-34-109.us-east-2.compute.internal",
            "private_ip": "172.31.34.109",
            "public_dns": "ec2-18-117-193-111.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.193.111",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08739324a0c8c9f41",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "mediawiki-dev1-rds-sg-test"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f69e343",
            "tags": {
              "Name": "mediawiki-instance1-green-0",
              "Project": "mediawiki"
            },
            "tags_all": {
              "Name": "mediawiki-instance1-green-0",
              "Project": "mediawiki"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0466d2362e6eebd46"
            ]
          },
          "dependencies": [
            "aws_security_group.security_group",
            "data.aws_ami.centos",
            "data.aws_subnet.subnet_id",
            "data.aws_subnet_ids.all_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e36b7901e884a10",
            "arn": "arn:aws:ec2:us-east-2:128198028467:instance/i-0276f01a4d5caedfb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0276f01a4d5caedfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deepthi",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f49bd5944356cdda",
            "private_dns": "ip-172-31-47-148.us-east-2.compute.internal",
            "private_ip": "172.31.47.148",
            "public_dns": "ec2-3-142-95-229.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.95.229",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-068f1513c9e3bf995",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "mediawiki-dev1-rds-sg-test"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f69e343",
            "tags": {
              "Name": "mediawiki-instance1-green-1",
              "Project": "mediawiki"
            },
            "tags_all": {
              "Name": "mediawiki-instance1-green-1",
              "Project": "mediawiki"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0466d2362e6eebd46"
            ]
          },
          "dependencies": [
            "data.aws_subnet_ids.all_subnets",
            "aws_security_group.security_group",
            "data.aws_ami.centos",
            "data.aws_subnet.subnet_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "appln",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:128198028467:loadbalancer/app/test-lb-tf/37c3bbbeaad9aa13",
            "arn_suffix": "app/test-lb-tf/37c3bbbeaad9aa13",
            "dns_name": "test-lb-tf-30480244.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:128198028467:loadbalancer/app/test-lb-tf/37c3bbbeaad9aa13",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0466d2362e6eebd46"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0f69e343"
              },
              {
                "subnet_id": "subnet-4a082a30"
              }
            ],
            "subnets": [
              "subnet-0f69e343",
              "subnet-4a082a30"
            ],
            "tags": {
              "Project": "mediawiki"
            },
            "tags_all": {
              "Project": "mediawiki"
            },
            "vpc_id": "vpc-ed73be86",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "data.aws_subnet_ids.all_subnets",
            "aws_security_group.security_group",
            "data.aws_subnet.subnet_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:128198028467:listener/app/test-lb-tf/37c3bbbeaad9aa13/319c69e504af2677",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 600,
                        "enabled": true
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-2:128198028467:targetgroup/tf-blue-lb-tg/f5bf404dbc9d3aa2",
                        "weight": 25
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-2:128198028467:targetgroup/tf-green-lb-tg/60095ee8798523e0",
                        "weight": 75
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:128198028467:listener/app/test-lb-tf/37c3bbbeaad9aa13/319c69e504af2677",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:128198028467:loadbalancer/app/test-lb-tf/37c3bbbeaad9aa13",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.appln",
            "aws_lb_target_group.blue",
            "aws_lb_target_group.green",
            "aws_security_group.security_group",
            "data.aws_subnet.subnet_id",
            "data.aws_subnet_ids.all_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:128198028467:targetgroup/tf-blue-lb-tg/f5bf404dbc9d3aa2",
            "arn_suffix": "targetgroup/tf-blue-lb-tg/f5bf404dbc9d3aa2",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:128198028467:targetgroup/tf-blue-lb-tg/f5bf404dbc9d3aa2",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-blue-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-ed73be86"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:128198028467:targetgroup/tf-green-lb-tg/60095ee8798523e0",
            "arn_suffix": "targetgroup/tf-green-lb-tg/60095ee8798523e0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:128198028467:targetgroup/tf-green-lb-tg/60095ee8798523e0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-green-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-ed73be86"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:128198028467:targetgroup/tf-blue-lb-tg/f5bf404dbc9d3aa2-20210621130146691400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:128198028467:targetgroup/tf-blue-lb-tg/f5bf404dbc9d3aa2",
            "target_id": "i-0c7fef6aa11b7671a"
          },
          "dependencies": [
            "data.aws_subnet_ids.all_subnets",
            "aws_instance.blue",
            "aws_lb_target_group.blue",
            "aws_security_group.security_group",
            "data.aws_ami.centos",
            "data.aws_subnet.subnet_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:128198028467:targetgroup/tf-blue-lb-tg/f5bf404dbc9d3aa2-20210621130146733500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:128198028467:targetgroup/tf-blue-lb-tg/f5bf404dbc9d3aa2",
            "target_id": "i-0a46013f09b7b3a61"
          },
          "dependencies": [
            "aws_security_group.security_group",
            "data.aws_ami.centos",
            "data.aws_subnet.subnet_id",
            "data.aws_subnet_ids.all_subnets",
            "aws_instance.blue",
            "aws_lb_target_group.blue"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:128198028467:targetgroup/tf-green-lb-tg/60095ee8798523e0-20210621130146741500000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:128198028467:targetgroup/tf-green-lb-tg/60095ee8798523e0",
            "target_id": "i-0231fed08caef9029"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.security_group",
            "data.aws_ami.centos",
            "data.aws_subnet.subnet_id",
            "data.aws_subnet_ids.all_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:128198028467:targetgroup/tf-green-lb-tg/60095ee8798523e0-20210621130146727800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:128198028467:targetgroup/tf-green-lb-tg/60095ee8798523e0",
            "target_id": "i-0276f01a4d5caedfb"
          },
          "dependencies": [
            "aws_instance.green",
            "aws_lb_target_group.green",
            "aws_security_group.security_group",
            "data.aws_ami.centos",
            "data.aws_subnet.subnet_id",
            "data.aws_subnet_ids.all_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:128198028467:security-group/sg-0466d2362e6eebd46",
            "description": "mediawiki-dev1-rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0466d2362e6eebd46",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mediawiki-dev1-rds-sg-test",
            "name_prefix": "",
            "owner_id": "128198028467",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mediawiki-sg1",
              "Project": "mediawiki"
            },
            "tags_all": {
              "Name": "mediawiki-sg1",
              "Project": "mediawiki"
            },
            "timeouts": null,
            "vpc_id": "vpc-ed73be86"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}